# Enhanced-Dynamic-Memory-Requirement-Prediction

./: .gitignore  .gitmodules  README.md  init_data.txt  pyproject.toml
approach/: __init__.py  constants_and_global_misc.py  data_types.py  force_main.py  main.py  warning_types.py
approach/autoML/: regression.py
approach/files/: __init__.py  cached_data_transformations.py  data_directory.py  data_types.py  memory_data.py  metadata_data.py  task_timeseries_csv.py  task_timeseries_csv_directory.py  task_timeseries_csv_file_list.py  task_timeseries_csv_files.py  wf_csv_directory.py
approach/models/: FirstAllocation.py  __init__.py  change_point_segment_model.py  default_models.py  k_equal_segment_model.py  k_equal_segmenting_model.py  linear_regression.py  model_types.py  retry_models.py  rupture_segment_models.py  rupture_segmenting_models.py  segmenting_model.py  tovar_model.py  witt_model.py
approach/parameter_optimization/: __init__.py  optimization.py  simulation.py
approach/plotting/: plotting.py
approach/preprocessing/: __init__.py  basic.py  operations.py  specific.py
approach/progress/: progress.py
approach/scoring/: scoring.py
approach/simulation/: __init__.py  benchmark_data.py  benchmark_flat.py  benchmark_task_dir.py  benchmark_train_test_split.py  benchmark_workflow.py  data_types.py  evaluation.py  parsing.py  simulate.py
data/: atacseq  chipseq  eager  mag  methylseq  mhcquant  nanoseq  rangeland  sarek  scrnaseq  viralrecon
