[tool.poetry]
name = "mpds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
seaborn = "^0.13.0"
rich = "^13.7.0"
scikit-learn = "^1.3.2"
ruptures = "^1.1.9"
mpld3 = "^0.5.10"
dill = "^0.3.8"
smac = "^2.0.2"
bokeh = ">=2.4.2,<3.dev0 || >=4.dev0"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
